--- a/css/style.css
+++ b/css/style.css
@@ -233,3 +233,88 @@ body {
   margin-top: 263px;
   max-width: 1220px;
 }
+
+.advantage__header {
+  margin-top: 232px;
+}
+.advantage__item {
+  flex-basis: 386px;
+}
+.advantage__subtitle {
+  min-height: 56px;
+}
+.advantage__text {
+  margin-top: 52px;
+}
+
+.footer {
+  margin-top: 251px;
+}
+.footer_gray {
+  background-color: #F7F7F7;
+}
+.footer__wrapper {
+  padding-top: 96px;
+  display: flex;
+  justify-content: space-between;
+}
+.footer__tagline {
+  max-width: 304px;
+  margin-right: 157px;
+}
+.footer__logo {
+  font-family: "Merriweather", serif;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 30px;
+}
+.footer__slogan {
+  font-family: "Merriweather", serif;
+  font-size: 48px;
+  line-height: 60px;
+  font-weight: 700;
+}
+.footer__menu-wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 766px;
+}
+.footer__menu-title {
+  font-family: "Merriweather", serif;
+  font-size: 18px;
+  line-height: 23px;
+  font-weight: 700;
+}
+.footer__item {
+  list-style-type: none;
+}
+.footer__menu-link {
+  display: block;
+  margin-top: 24px;
+  line-height: 17px;
+  font-size: 14px;
+  text-decoration: none;
+  color: #000000;
+  font-weight: 400;
+}
+.footer__devider {
+  border-bottom: 1px solid rgb(0, 0, 0);
+  opacity: 0.2;
+  width: 100%;
+  margin-top: 84.5px;
+  margin-bottom: 28.5px;
+}
+.footer__copyright {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 63px;
+}
+.footer__copyright-nav {
+  display: flex;
+  gap: 48px;
+  align-items: center;
+}
+.footer__copyright-link {
+  margin: 0;
+}
